exports[`<GeolinkLayerToggle /> renders matches previous snapshot 1`] = `
<div
  className="checkbox">
  <label>
    <input
      defaultChecked={undefined}
      onClick={undefined}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span>
      testLabel
    </span>
  </label>
</div>
`;

exports[`<GeolinkLayerToggle /> renders matches previous snapshot 2`] = `
<div
  className="checkbox">
  <label>
    <input
      defaultChecked={true}
      onClick={undefined}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span>
      testLabel
    </span>
  </label>
</div>
`;

exports[`<GeolinkLayerToggle /> renders matches previous snapshot 3`] = `
<div
  className="checkbox">
  <label>
    <input
      defaultChecked={false}
      onClick={undefined}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span>
      testLabel
    </span>
  </label>
</div>
`;

exports[`<GeolinkLayerToggle /> renders matches previous snapshot 4`] = `
<div
  className="checkbox">
  <label>
    <input
      defaultChecked={false}
      onClick={[Function bound mockConstructor]}
      type="checkbox"
      value="testVal" />
    <span
      className="cr" />
    <span>
      testLabel
    </span>
  </label>
</div>
`;
